# ai_knowledgebase

./: .env  .env.example  .gitignore  .python-version  Makefile  README.md  package.json
apps/search-api/: main.py  (+1 more)
energy-data-search/: .env  .gitignore  Makefile  README.md  REINDEX_GUIDE.md  debug_db.py  pyproject.toml  test_chroma_simple.py  test_db.py  test_energy_queries.py
energy-data-search/specs/: CHROMADB_READONLY_FIX.md  SYSTEM_ARCHITECTURE.md
energy-data-search/src/energy_data_search/: __init__.py  __main__.py  config.py
energy-data-search/src/energy_data_search/cli/: __init__.py  main.py  reindex.py
energy-data-search/src/energy_data_search/indexers/: chromadb_indexer.py
energy-data-search/src/energy_data_search/loaders/: document_loader.py
energy-data-search/src/energy_data_search/query/: incremental_indexer.py  search_engine.py
energy-data-search/src/energy_data_search/utils/: __init__.py  index_tracker.py
energy-data-search/test_direct_chroma/: chroma.sqlite3
gis/: create_policy_maps.py  dsire_policies.json  extract_pdf_data.py  geojson_to_kml.py
scripts/: create-db-user.sh  setup-db.sh  setup-postgres.sh
specs/: api-design-v2.md  api-design-v3.md  api-design.md  api-validation-openapi.md  battalion-platform-integration-v2.md  battalion-platform-integration.md  chromadb-implementation-guide.md  chromadb-multi-tenant-document-management.md  data-models-v2.md  data-models.md  nextjs-app-architecture-v2.md  nextjs-app-architecture-v3.md  nextjs-app-architecture.md  project-summary.md  python-search-api.md  ui-ux-components.md
(+65 files in other folders)
